working custom directive

--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,6 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="module.js"></script>
     <script src="movie-list.component.js"></script>
+    <script src="movie-rating.component.js"></script>
   </body>
 </html>
