--- a/app/index.html
+++ b/app/index.html
@@ -12,12 +12,21 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">At The Movies</a>
         </div>
+        <ul class="nav.navbar-nav.navbar-left">
+          <li>
+            <a href="#/list">List</a>
+          </li>
+          <li>
+            <a href="#/about">About</a>
+          </li>
+        </ul>
       </div>
     </nav>
       <div class="container">
-        <movie-list></movie-list>
+        <ng-view></ng-view>
       </div>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="module.js"></script>
     <script src="movie-list.component.js"></script>
     <script src="movie-rating.component.js"></script>
