--- a/app/index.html
+++ b/app/index.html
@@ -7,28 +7,15 @@
     <title></title>
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-inverse" class="container-fluid">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">At The Movies</a>
-        </div>
-        <ul class="nav.navbar-nav.navbar-left">
-          <li>
-            <a href="#/list">List</a>
-          </li>
-          <li>
-            <a href="#/about">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-      <div class="container">
-        <ng-view></ng-view>
-      </div>
+
+    <movie-app></movie-app>
+
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="/bower_components/angular-component-router/angular_1_router.js"></script>
     <script src="module.js"></script>
     <script src="movie-list.component.js"></script>
     <script src="movie-rating.component.js"></script>
+    <script src="movie-app.component.js"></script>
+    <script src="movie-details.component.js"></script>
   </body>
 </html>
